--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,16 @@ button {
   width: 100px;
   border-radius: 16px;
   font-size: 38px;
+  transition: 50ms;
+  cursor: pointer;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+button:hover {
+  transform: scale(1.05);
 }
 
 #clear,
@@ -71,7 +81,7 @@ button {
 }
 
 #equals {
-  background-color: green;
+  background-color: lightgreen;
 }
 
 #row5 {
